--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
   "dependencies": {
     "@swc/helpers": "~0.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nx/cypress": "16.7.2",
     "@nx/eslint-plugin": "16.7.2",
+    "@nx/jest": "16.7.2",
     "@nx/js": "16.7.2",
     "@nx/linter": "16.7.2",
     "@nx/react": "16.7.2",
     "@nx/vite": "16.7.2",
     "@nx/workspace": "16.7.2",
+    "@swc-node/register": "~1.4.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -36,9 +40,13 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "16.7.2",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.1.3",
     "vite": "~4.3.9",
     "vitest": "~0.32.0"
